--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <title>Meu site pessoal</title>
 </head>
 <body>
+    <header>
+        <li><a>Home</a></li>
+        <a>Projetos</a>
+        <a>Sobre</a>
+    </header>
+    <section id="#1">
+
+    </section>
+    <section>
+        
+    </section>
+    <section>
+        
+    </section>
     <h1>Github Pages - Testando hospedagem</h1>
 </body>
 </html>
