--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link src="style.css" rel="stylesheet">
     <title>Meu site pessoal</title>
 </head>
 <body>
@@ -15,10 +16,10 @@
     <section id="#1">
 
     </section>
-    <section>
+    <section id="#2">
         
     </section>
-    <section>
+    <section id="#3">
         
     </section>
     <h1>Github Pages - Testando hospedagem</h1>
