--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 </head>
 <body>
     <header>
-        <li><a>Home</a></li>
-        <a>Projetos</a>
-        <a>Sobre</a>
+        <ul>
+            <li><a href="1">Home</a></li>
+            <li><a>Projetos</a></li>
+            <li><a>Sobre</a></li>
+        </ul>
     </header>
     <section id="#1">
-
+        a
     </section>
     <section id="#2">
         
