--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
     <header>
         <ul>
             <li><a href="1">Home</a></li>
-            <li><a>Projetos</a></li>
-            <li><a>Sobre</a></li>
+            <li><a href="2">Projetos</a></li>
+            <li><a href="3">Sobre</a></li>
         </ul>
     </header>
-    <section id="#1">
-        a
-    </section>
-    <section id="#2">
-        
-    </section>
-    <section id="#3">
-        
-    </section>
+    <h2 id="#1">Home</h2>
+    <!-- Área do home. colocar uma imagem com frase de efeito -->
     <h1>Github Pages - Testando hospedagem</h1>
+
+    <h2 id="#2">Projetos
+        <!-- área do projeto, colocar cards dos projetos com link do repositório do git hub -->
+    </h2>
+    <h2 id="#3">
+        <!-- falar um pouco sobre você, interesses e links de forma de entrar em contato nas redes sociais -->
+    </h2>
 </body>
 </html>
