--- a/index.html
+++ b/index.html
@@ -15,15 +15,20 @@
             <li><a href="3">Sobre</a></li>
         </ul>
     </header>
-    <h2 id="#1">Home</h2>
-    <!-- Área do home. colocar uma imagem com frase de efeito -->
-    <h1>Github Pages - Testando hospedagem</h1>
-
-    <h2 id="#2">Projetos
-        <!-- área do projeto, colocar cards dos projetos com link do repositório do git hub -->
-    </h2>
-    <h2 id="#3">
-        <!-- falar um pouco sobre você, interesses e links de forma de entrar em contato nas redes sociais -->
-    </h2>
+    <div>
+        <div>
+            <h2 name="1">Home</h2>
+            <!-- Área do home. colocar uma imagem com frase de efeito -->
+            <h1>Github Pages - Testando hospedagem</h1>
+        </div>
+        <div>
+            <h2 name="2">Projetos</h2>
+                <!-- área do projeto, colocar cards dos projetos com link do repositório do git hub -->
+        </div>
+        <div>
+            <h2 name="3">Sobre</h2>
+                <!-- falar um pouco sobre você, interesses e links de forma de entrar em contato nas redes sociais -->
+        </div>
+    </div>
 </body>
 </html>
