--- a/index.html
+++ b/index.html
@@ -10,23 +10,23 @@
 <body>
     <header>
         <ul>
-            <li><a href="1">Home</a></li>
-            <li><a href="2">Projetos</a></li>
-            <li><a href="3">Sobre</a></li>
+            <li><a href="#1">Home</a></li>
+            <li><a href="#2">Projetos</a></li>
+            <li><a href="#3">Sobre</a></li>
         </ul>
     </header>
-    <div>
-        <div>
-            <h2 name="1">Home</h2>
+    <div class="principal">
+        <div class="sessões">
+            <h2 id="1">Home</h2>
             <!-- Área do home. colocar uma imagem com frase de efeito -->
             <h1>Github Pages - Testando hospedagem</h1>
         </div>
-        <div>
-            <h2 name="2">Projetos</h2>
+        <div class="sessões">
+            <h2 id="2">Projetos</h2>
                 <!-- área do projeto, colocar cards dos projetos com link do repositório do git hub -->
         </div>
-        <div>
-            <h2 name="3">Sobre</h2>
+        <div class="sessões">
+            <h2 id="3">Sobre</h2>
                 <!-- falar um pouco sobre você, interesses e links de forma de entrar em contato nas redes sociais -->
         </div>
     </div>
