--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         </div>
         <div class="sessões"><h2 id="2">Projetos</h2>
             
-            <a href="">Projeto Ueda</a>
-            <a href="">Projeto Integrador (Em andamento)</a>
+            <a href="">Projeto Ueda</a><br>
+            <a href="https://github.com/gadulb/pi_ueda">Projeto Integrador (Em andamento)</a><br>
                 <!-- área do projeto, colocar cards dos projetos com link do repositório do git hub -->
         </div>
         <div class="sessões"><h2 id="3">Sobre</h2>
