--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
 </head>
 <body>
     <header>
-        <ul>
-            <li><a href="#1">Home</a></li>
-            <li><a href="#2">Projetos</a></li>
-            <li><a href="#3">Sobre</a></li>
+        <a href="#1">Home</a>
+        <a href="#2">Projetos</a>
+        <a href="#3">Sobre</a>
         </ul>
     </header>
     a<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
