--- a/index.html
+++ b/index.html
@@ -58,6 +58,19 @@
         p{
             font-size: 20px;
         }
+        fieldset{
+            padding: 25px;
+            border-radius: 1rem;
+            border: 0px;
+            box-shadow: 2px 1px 25px rgb(206, 205, 199);
+            width: 500px;
+        }
+        fieldset p{
+            font-size: 20px;
+            text-decoration: none;
+            font-weight: bold;
+            color: black;
+        }
         footer{
             background-color: gainsboro;
             padding: 25px;
@@ -97,9 +110,11 @@
             </div>
             <div class="sec3" id="3"><h1>Sobre</h1>
                 <div class="sobre" title="Sobre mim">
-                    <p>Olá, seja bem-vindo(a) ao meu site pessoal, feito por mim, <b>gadulb</b>! :D</p>
-                    <p>Atualmente, sou estudante do ensino médio integrado ao técnico de informática para internet, em que aprendo uma visão geral sobre tecnologias que envolvam a internet.</p>
-                    <p>Sempre tive muito interesse pela área de informática, mas também tenho interesse em outras áreas, como a da música, por exemplo. Além disso, gosto de jogar ou assistir a filmes e séries em meu tempo livre.</p>
+                    <fieldset>
+                        <p>Olá, seja bem-vindo(a) ao meu site pessoal, feito por mim, <b>gadulb</b>! :D</p>
+                        <p>Atualmente, sou estudante do ensino médio integrado ao técnico de informática para internet, em que aprendo uma visão geral sobre tecnologias que envolvam a internet.</p>
+                        <p>Sempre tive muito interesse pela área de informática, mas também tenho interesse em outras áreas, como a da música, por exemplo. Além disso, gosto de jogar ou assistir a filmes e séries em meu tempo livre.</p>
+                    </fieldset>
                 </div>
                 <div title="Redes Sociais">
                     <h1>Redes Sociais</h1>
