--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
             border: 0px;
             box-shadow: 2px 1px 25px rgb(206, 205, 199);
             width: 500px;
+            background-color: #F0F0F0;
         }
         fieldset p{
             font-size: 20px;
             text-decoration: none;
-            font-weight: bold;
             color: black;
         }
         footer{
